use-cases/overlays/routes/httpbin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: overlays
spec:
  parentRefs:
  - name: gw
    namespace: overlays
  hostnames:
  - "httpbin.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      namespace: overlays-httpbin
      port: 8000
